--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <table>
         <tr>
             <td> <img src="./PROFILE PHOTO.jpeg" width="100px" alt="PROFILE PICTURE" > </td>
-            <td> <h1>VIBHOR THAKARE</h1>full time web developer<br><br></td>
+            <td> <h1>VIBHOR THAKARE</h1><dd>full time web developer</dd><br><br></td>
         </tr>
         </table>
         <hr>
